<resources>
    <string name="app_name">StockInventory</string>
    <string name="add_dummy_data">Add Dummy Data</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone_number">Supplier Phone Number</string>
    <string name="save">Save</string>
    <string name="insertion_failed">Insertion Failed</string>
    <string name="this_place_seems_so_lonely">This Place Seems So Lonely</string>
    <string name="get_started_by_adding_a_product">Get Started By Adding a Product</string>
    <string name="edit_stock">Edit Stock</string>
    <string name="add_stock">Add Stock</string>
    <string name="delete_record">Delete Record</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all_data">Delete All Data</string>
    <string name="sale">Sale</string>
    <string name="order">Order</string>
</resources>
